Add batch crud apis
